--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,10 +8,12 @@
               <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
             </tr>
             <tr>
-              <th>name<%= @user.name %> </th>  
+              <th>name</th>
+              </th><%= @user.name %> </th>  
             </tr>  
             <tr>
-              <th>introduction<%= @user.introduction %></th>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
             </tr>
           </tbody>  
         </table>
@@ -23,11 +25,11 @@
         <%= form_with model: @book, local:true do |f| %>
           <div class="form-group">
             <p>Title</p>
-            <%= f.text_field :title %>
+            <%= f.text_field :title, class: "form-control"%>
           </div>
           <div class="form-group">
             <p>Opinion</p>
-            <%= f.text_area :body %>
+            <%= f.text_area :body, class: "form-control" %>
           </div>
           <div class="form-group">
             <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
@@ -49,12 +51,12 @@
           <% @books.each do |book| %>
             <tbody>
               <tr>
-                <td><%#= link_to attachment_image_tag book.user, user_path(user), :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <td>
                 <%= link_to user_path(@user) do %>
                 <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
                 <% end %>
                 </td>
-                <td><%= link_to book.title, book_path(@user) %></td>
+                <td><%= link_to book.title, book_path(book) %></td>
                 <td><%= book.body %></td>
               </tr>  
             </tbody>
