--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,16 +2,16 @@
   <div class='row'>
     <div class='col-md-3'>
         <h2>User info</h2>
+          <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
         <table class="table">
           <tbody>
             <tr>
-              <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
-            </tr>
-            <tr>
-              <th>name<%= @user.name %> </th>  
+              <th>name</th>
+              <th><%= @user.name %> </th>  
             </tr>  
             <tr>
-              <th>introduction<%= @user.introduction %></th>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
             </tr>
           </tbody>  
         </table>
@@ -23,11 +23,11 @@
         <%= form_with model: @book, local:true do |f| %>
           <div class="form-group">
             <p>Title</p>
-            <%= f.text_field :title %>
+            <%= f.text_field :title, class: "form-control"%>
           </div>
           <div class="form-group">
             <p>Opinion</p>
-            <%= f.text_area :body %>
+            <%= f.text_area :body, class: "form-control" %>
           </div>
           <div class="form-group">
             <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
@@ -38,21 +38,21 @@
       <div class="col-md-8 offset-md-1">
         <h2>Book detail</h2>
           <table class="table">
-          <% @books.each do |book| %>
             <tbody>
               <tr>
-                <td><%#= link_to attachment_image_tag book.user, user_path(user), :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <td>
                 <%= link_to user_path(@user) do %>
-                <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <br><%= @user.name %>
                 <% end %>
                 </td>
-                <td><%= link_to book.title, book_path(@user) %></td>
-                <td><%= book.body %></td>
-                <td><%= link_to "Edit", edit_book_path(@user), class:"btn btn-sm btn-cuccsess" %></td>
-                <td><%= link_to "Destroy", method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
+                <td><%= link_to @book.title, book_path(@user) %></td>
+                <td><%= @book.body %></td>
+                <td><%= link_to "Edit", edit_book_path, class:"btn btn-sm btn-success" %></td>
+                <td><%= link_to "Destroy", class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
               </tr>  
             </tbody>
-          <% end %>  
+          
           </table>
       </div>
     </div>
