--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               </li>
 
               <li>
-                <%= link_to "Users", new_user_registration_path, class: 'fas fa-users nav-link text-light' %>
+                <%= link_to "Users", users_path, class: 'fas fa-users nav-link text-light' %>
               </li>
             
               <li>
@@ -61,7 +61,11 @@
         </div>
       </nav>
     </header>
-    <%= yield %>
+    <main>
+        <p id="notice"><%= notice %></p>
+        <%= yield %>
+      </main>
+
     
     <footer>
       <div class="container mt-5">
