--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,21 +28,7 @@
               <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
             </div>
      
-      <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, local:true do |f| %>
-          <div class="form-group">
-            <p>Title</p>
-            <%= f.text_field :title, class: "form-control"%>
-          </div>
-          <div class="form-group">
-            <p>Opinion</p>
-            <%= f.text_area :body, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
-          </div>
-        <% end %>
-      </div>    
+      <%= render 'books/createbar', book: @book %>
  
       <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
