--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,39 +1,10 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
-        <h2>User info</h2>
-          <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
-        <table class="table">
-          <tbody>
-            <tr>
-              <th>name</th>
-              <th><%= @book.user.name %> </th>  
-            </tr>  
-            <tr>
-              <th>introduction</th>
-              <th><%= @book.user.introduction %></th>
-            </tr>
-          </tbody>  
-        </table>
-            <div class="row">
-              <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
-            </div>
-     
-      <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, local:true do |f| %>
-          <div class="form-group">
-            <p>Title</p>
-            <%= f.text_field :title, class: "form-control"%>
-          </div>
-          <div class="form-group">
-            <p>Opinion</p>
-            <%= f.text_area :body, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
-          </div>
-        <% end %>
-      </div>    
+      
+      <%= render 'books/sidebar', user: @book.user %>
+      
+      <%= render 'books/createbar', book: @booknew %>
  
       <div class="col-md-8 offset-md-1">
         <h2>Book detail</h2>
@@ -41,7 +12,7 @@
             <tbody>
               <tr>
                 <td>
-                <%= link_to user_path(@user) do %>
+                <%= link_to user_path(@book.user) do %>
                 <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
                 <br><%= @book.user.name %>
                 <% end %>
