--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
         </div>
         <div class="actions">
-          <%= f.submit "Sign Up", class: "btn btn-sm btn-success btn-sm btn-block sign_up" %>
+          <%= f.submit "Sign up", class: "btn btn-sm btn-success " %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
