--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,31 +23,26 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li>
-                <%#= link_to "Home", user_path, class: 'fas fa-home nav-link text-light' %>
+                <%= link_to "Home", user_path(current_user), class: 'fas fa-home nav-link text-light' %>
               </li>
-
               <li>
                 <%= link_to "Users", users_path, class: 'fas fa-users nav-link text-light' %>
               </li>
-            
               <li>
                 <%= link_to "Books", books_path, class: 'fas fa-book nav-link text-light' %>
               </li>
-    
               <li>
-                <%= link_to "Log out", root_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
               </li>
             <% else %>
               <li>
-                <%= link_to "Home", user_path, class: 'fas fa-home nav-link text-light' %>
+                <%= link_to "Home", root_path, class: 'fas fa-home nav-link text-light' %>
               </li>
-             
              <li>  
-                <%= link_to "About", homes_path, class: 'fas fa-link nav-link text-light' %>
+                <%= link_to "About", home_about_path, class: 'fas fa-link nav-link text-light' %>
               </li>
-             
               <li>
-                <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
+                <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
               </li>
               <li>
                 <%= link_to "Log in", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
@@ -61,7 +56,7 @@
     <main>
       <p id="notice"><%= notice %></p>
       <%= yield %>
-      </main>
+    </main>
     <footer>
       <div class="container mt-5">
         <div class="row">
